--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ pyyaml = "^6.0.1"
 jinja2 = "^3.1.4"
 mypy = "^1.11.0"
 pydantic = "^2.8.2"
+polars = "^1.2.1"
+pandas = "^2.2.2"
 
 
 [build-system]
