--- a/recipe_template/profiles/local.yaml
+++ b/recipe_template/profiles/local.yaml
@@ -15,12 +15,11 @@ model_registry:
   model_name: ""
 
 INGEST_CONFIG:
-  #
-  # FIXME::REQUIRED: Specify the format of the training and evaluation dataset. Natively supported
-  #                  formats are: parquet, spark_sql, delta.
-  using: ""
-  # FIXME::OPTIONAL: Specify the training and evaluation data location.
-  # location: ""
+
+  location: "/home/khaldi/Documents/github_repos/refined_mlflow/recipes/test.csv"
+  framework: PolarsDataset
+
+
 
 # INGEST_SCORING_CONFIG:
 #   For different options please read: https://github.com/mlflow/recipes-regression-template#batch-scoring
