--- a/recipe_template/recipe.yaml
+++ b/recipe_template/recipe.yaml
@@ -15,7 +15,7 @@
 # NOTE: YAML does not support tabs for indentation. Please use spaces and ensure that all YAML
 #       files are properly formatted.
 
-
+  recipe_root_path : "/home/khaldi/Documents/github_repos/refined_mlflow/recipe_template/recipe.yaml"
   recipe: "classification/v1"
   # FIXME::REQUIRED: Specifies the target column name for model training and evaluation.
   target_col: ""
@@ -29,49 +29,4 @@
   steps:
     # Specifies the dataset to use for model development
     ingest: {{INGEST_CONFIG}}
-    split:
-      #
-      # FIXME::OPTIONAL: Adjust the train/validation/test split ratios below.
-      #
-      split_ratios: [0.75, 0.125, 0.125]
-      #
-      #  FIXME::OPTIONAL: Specifies the method to use to "post-process" the split datasets. Note that
-      #                   arbitrary transformations should go into the transform step.
-      post_split_filter_method: create_dataset_filter
-    transform:
-      using: "custom"
-      #
-      #  FIXME::OPTIONAL: Specifies the method that defines an sklearn-compatible transformer, which
-      #                   applies input feature transformation during model training and inference.
-      transformer_method: transformer_fn
-    train:
-      #
-      # FIXME::REQUIRED: Specifies the method to use for training. Options are "automl/flaml" for
-      #                  AutoML training or "custom" for user-defined estimators.
-      using: ""
-    evaluate:
-      #
-      # FIXME::OPTIONAL: Sets performance thresholds that a trained model must meet in order to be
-      #                  eligible for registration to the MLflow Model Registry.
-      #
-      # validation_criteria:
-      #   - metric: root_mean_squared_error
-      #     threshold: 10
-    register_:
-      # Indicates whether or not a model that fails to meet performance thresholds should still
-      # be registered to the MLflow Model Registry
-      allow_non_validated_model: false
-    # FIXME::OPTIONAL: Specify the dataset to use for batch scoring. All params serve the same function
-    #                  as in `data`
-    # ingest_scoring: {{INGEST_SCORING_CONFIG}}
-    # predict:
-    #   output: {{PREDICT_OUTPUT_CONFIG}}
-    #   model_uri: "models/model.pkl"
-    #   result_type: "double"
-    #   save_mode: "default
-  # custom_metrics:
-  #   FIXME::OPTIONAL: Defines custom performance metrics to compute during model development.
-  #     - name: ""
-  #       function: get_custom_metrics
-  #       greater_is_better: False
 
