--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ mypy = "^1.11.0"
 pydantic = "^2.8.2"
 polars = "^1.2.1"
 pandas = "^2.2.2"
+scikit-learn = "^1.5.1"
+jupyter = "^1.0.0"
 
 
 [build-system]
