--- a/recipe_template/recipe.yaml
+++ b/recipe_template/recipe.yaml
@@ -14,19 +14,36 @@
 #
 # NOTE: YAML does not support tabs for indentation. Please use spaces and ensure that all YAML
 #       files are properly formatted.
-
-  recipe_root_path : "/home/khaldi/Documents/github_repos/refined_mlflow/recipe_template/recipe.yaml"
   recipe: "classification/v1"
+
+  context:
+    recipe_root_path : "/home/khaldi/Documents/github_repos/refined_mlflow/recipe_template"
+    target_col: "category"
+
   # FIXME::REQUIRED: Specifies the target column name for model training and evaluation.
-  target_col: ""
-  # FIXME::REQUIRED: Sets the primary metric to use to evaluate model performance. This primary
-  #                  metric is used to select best performing models in MLflow UI as well as in
-  #                  train and evaluation step.
-  #                  Built-in metrics are: example_count, mean_absolute_error, mean_squared_error,
-  #                  root_mean_squared_error, sum_on_label, mean_on_label, max_error,
-  #                  mean_absolute_percentage_error
-  primary_metric: ""
+
   steps:
     # Specifies the dataset to use for model development
     ingest: {{INGEST_CONFIG}}
+    split:
+        split_fn: "split_fn"
+        split_ratios: [ 0.75, 0.125, 0.125 ]
+    transform:        #
+        transformer_fn: "transformer_fn"
+
+    train:
+        estimator_fn: "estimator_fn"
+        loss: "log_loss"
+        validation_metric: &validation_metric
+            name: "accuracy_score"
+            params: {}
+    evaluate:
+        validation_criteria:
+            - metric: *validation_metric
+              threshold: .5
+            - metric:
+                  name: "f1_score"
+                  params: {"average" : "weighted"}
+              threshold: .5
+
 
