--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ scikit-learn = "^1.5.1"
 jupyter = "^1.0.0"
 pickledb = "^0.9.2"
 pre-commit = "^3.8.0"
+mlflow = "^2.15.0"
+typeguard = "^4.3.0"
 
 
 [build-system]
