--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pickledb = "^0.9.2"
 pre-commit = "^3.8.0"
 mlflow = "^2.15.0"
 typeguard = "^4.3.0"
+types-requests = "^2.32.0.20240712"
 
 
 [build-system]
