--- a/avs/fail_nff/recipe.yaml
+++ b/avs/fail_nff/recipe.yaml
@@ -27,7 +27,8 @@
     # Specifies the dataset to use for model development
     ingest:
         ingest_fn: "ingest_fn"
-        location: "/home/khaldi/Documents/github_repos/refined_mlflow/avs/fail_nff/sru_datatset.csv"
+        location: &dataset_location
+            "/home/khaldi/Documents/github_repos/refined_mlflow/avs/fail_nff/sru_datatset.csv"
         sep: ","
         encoding: "ISO-8859-1"
 
@@ -56,6 +57,18 @@
                       type: "InFilter"
                       neg: 1
                       values: ["vide"]
+                formatter:
+                    cleaner:
+                        regex_patterns:
+                            '\* [a-z]* \*[:]': ' '
+                            '[a-z]\[[a-z0-9]+\]': ' '
+                            '<[^>]+>': ' '
+                            '[^\w\s]': ' '
+                            '\d+': ' '
+                            '\b[a-zA-Z]\b': ''
+                            '\W': ' '
+                            '\s+': ' '
+
             cm_action_correc:
                 embedder:
                     path: "sklearn.feature_extraction.text.TfidfVectorizer"
@@ -65,6 +78,8 @@
                 filters:
                     - <<: *not_in_filter_vide
                     - <<: *blanck_filter
+                formatter:
+
             cm_info_interne:
                 embedder:
                     path: "sklearn.feature_extraction.text.TfidfVectorizer"
@@ -74,33 +89,34 @@
                 filters:
                     - <<: *not_in_filter_vide
                     - <<: *blanck_filter
+                formatter:
             cm_constat_visu:
                 embedder:
-                    path: "sklearn.feature_extraction.text.TfidfVectorizer"
-                    params:
-                        max_features: 5000
-                        ngram_range: (1,3)
                 filters:
                     - <<: *not_in_filter_vide
                     - <<: *blanck_filter
+                formatter:
             fl_valid:
                 embedder:
                 filters:
                     - type: "EqualFilter"
                       neg: 0
                       value: "V"
+                formatter:
             reason_of_removal:
                 embedder:
                 filters:
                     - type: "InFilter"
                       neg: 1
                       values: ["PARKED", "DOUBLE", "1st Fit"]
+                formatter:
             rmv_type:
                 embedder:
                 filters:
                     - type: "EqualFilter"
                       neg: 1
                       value: "U"
+                formatter:
 
 
 
@@ -122,6 +138,7 @@
         register_fn: "register_fn"
         artifact_path: "sklearn-model"
         registered_model_name: "registered_model_name"
+        dataset_location: *dataset_location
 
 
 
