--- a/avs/fail_nff/recipe.yaml
+++ b/avs/fail_nff/recipe.yaml
@@ -27,11 +27,13 @@
     # Specifies the dataset to use for model development
     ingest:
         ingest_fn: "ingest_fn"
-        location: &dataset_location
-            "/home/khaldi/Documents/github_repos/refined_mlflow/avs/fail_nff/sru_datatset.csv"
-        sep: ","
-        encoding: "ISO-8859-1"
-
+        table_name: "sru_dataset"
+        credentials:
+            username: "postgres"
+            password: "postgres123"
+            hostname: "192.168.1.65"
+            port: "5433"
+            database_name: "ingest"
     split:
         split_fn: "split_fn"
         split_ratios: [ 0.75, 0.125, 0.125 ]
@@ -138,7 +140,7 @@
         register_fn: "register_fn"
         artifact_path: "sklearn-model"
         registered_model_name: "registered_model_name"
-        dataset_location: *dataset_location
+        dataset_location: "/home/khaldi/Documents/github_repos/refined_mlflow/avs/fail_nff/sru_datatset.csv"
 
 
 
