--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ regex = "^2024.7.24"
 nltk = "^3.8.1"
 starlette = "^0.38.2"
 types-regex = "^2024.7.24.20240726"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
