--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,4 +24,4 @@ repos:
       rev: v2.3.1
       hooks:
         - id: autoflake
-          args: ["--remove-all-unused-imports", "--in-place", "-r", "recipes"]
+          args: ["--remove-all-unused-imports", "--in-place", "-r", "refined_mlflow/recipes"]
